asset/gatewayclass/multi/public-store-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: public-store-route
  namespace: store
spec:
  hostnames:
  - store.example.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-http
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: store-west-1
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /west
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: store-east-1
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /east
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: store
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
